1. Added scrollbars to timeline. 2. Fixed mediaready double dispatch. 3. Probably broke zoom functionality.

--- a/src/timeline/butter.timeline.css
+++ b/src/timeline/butter.timeline.css
@@ -46,6 +46,10 @@ THE SOFTWARE.
   left: 0px;
   width: 100%;
   border-bottom: 1px solid #000;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 #butter-timeline-status-bar div {
@@ -117,7 +121,7 @@ THE SOFTWARE.
   -moz-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
-  user-sele4ct: none;
+  user-select: none;
 }
 
 #butter-timeline .butter-timeline-media-container {
@@ -126,17 +130,45 @@ THE SOFTWARE.
   top: 20px;
 }
 
-#butter-timeline .butter-timeline-scroll-h {
+#butter-timeline .butter-timeline-scroll {
   background: #222;
   border-radius: 15px;
   position: absolute;
-  bottom: 0px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+#butter-timeline .butter-timeline-scroll-handle {
+  height: 100%;
+  position: absolute;
+  background: #333;
+  min-width: 10px;
+  border-radius: 15px;
+}
+
+#butter-timeline .butter-timeline-scroll-handle:hover {
+  background: #345;
+  cursor: pointer;
+}
+
+#butter-timeline .butter-timeline-scroll-h {
+  bottom: -14px;
   width: 100%;
   height: 10px;
+  left: 0;
+}
+
+#butter-timeline .butter-timeline-scroll-v {
+  right: -14px;
+  width: 10px;
+  height: 100%;
+  top: 0;
 }
 
 #butter-timeline .butter-timeline-tracks {
-  width: 87%;
+  width: 100%;
   height: 200px;
   bottom: 20px;
   overflow: hidden;
@@ -161,12 +193,12 @@ THE SOFTWARE.
 
 #butter-timeline .butter-timeline-tracks .trackliner-container {
   width: 100%;
-  height: 100%;
   position: relative;
-  overflow: hidden;
   background: transparent;
   font-size: 100%;
   outline: none;
+  padding-right: 10px;
+  padding-bottom: 5px;
 }
 
 #butter-timeline .butter-timeline-tracks .trackliner-event {
